--- a/src/views/customers.ejs
+++ b/src/views/customers.ejs
@@ -1,11 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Sion</title>
-</head>
-<body>
+
+<%- include("./partials/_headers")%>
+
+<div class="container">
+    <div class="row mt-5">
+        <div class="col-md-7">
+            <div class="col-md-5">
+                <form action="/add" method="post">
+                    <div class="form-group">
+                        <input type="text" name="name" placeholder="Name" class="form-control">
+
+                    </div>
+                    <div class="form-group">
+                        <input type="text" name="addres" placeholder="addres" class="form-control">
+
+                    </div>
+                    <div class="form-group">
+                        <input type="text" name="phone" placeholder="phone" class="form-control">
+
+                    </div>
+
+                </form>
+            
+
+            </div>
     
-</body>
-</html>
+
+        </div>
+
+    </div>
+
+</div>
+<%- include("./partials/_footer")%>
+
