--- a/src/views/customers.ejs
+++ b/src/views/customers.ejs
@@ -1,10 +1,10 @@
 
 <%- include("./partials/_headers")%>
-
-<div class="container">
-    <div class="row mt-5">
-        <div class="col-md-7">
-            <div class="col-md-5">
+<div class="container mt-5">
+    <div class="col">
+        <div class="col-md-5">
+            <div class="card-body">
+                <h2>INSERTAR DATOS DEL CLIENTE</h2>
                 <form action="/add" method="post">
                     <div class="form-group">
                         <input type="text" name="name" placeholder="Name" class="form-control">
@@ -19,9 +19,48 @@
 
                     </div>
 
+                    <button type="submit" class="btn btn-primary"> Guardar</button>
                 </form>
             
 
+            </div>
+
+        <div class="col-md-5">           
+
+            <table class="table table-dark table-bordered table-hover">                
+                <thead>
+                    <tr>
+                        <th>N!</th>
+                        <th>Nombre</th>
+                        <th>Direccion</th>
+                        <th>Telefono</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <% if (data) { %> <% for(var i = 0; i < data.length; i++) {
+                    %>
+                    <tr>
+                      <td><%= (i + 1) %></td>
+                      <td><%= data[i].name %></td>
+                      <td><%= data[i].address %></td>
+                      <td><%= data[i].phone %></td>
+                      <td class="d-flex gap-2">
+                        <a href="/update/<%= data[i].id %>" class="btn btn-info">
+                          Edit
+                        </a>
+                        <a href="/delete/<%= data[i].id %>" class="btn btn-danger">
+                          Delete
+                        </a>
+                      </td>
+                    </tr>
+                    <% } %> <% } %>
+                  </tbody>
+            </table>
+
+
+
+            
             </div>
     
 
