cambios y ajustes de pantalla 	modified:   src/routes/customer.js 	modified:   src/views/customers.ejs 	new file:   src/views/login.ejs

--- a/src/views/customers.ejs
+++ b/src/views/customers.ejs
@@ -11,14 +11,25 @@
 
                     </div>
                     <div class="form-group">
-                        <input type="text" name="addres" placeholder="addres" class="form-control">
+                        <input type="text" name="lastName" placeholder="addres" class="form-control">
+
+                    </div>
+                    <div class="form-group">
+                        <input type="text" name="Age" placeholder="Age" class="form-control">
+
+                    </div>
+                    <div class="form-group">
+                        <input type="text" name="Nacionality" placeholder="Nacionality" class="form-control">
+
+                    </div>
+                    <div class="form-group">
+                        <input type="text" name="CI" placeholder="CI" class="form-control">
 
                     </div>
                     <div class="form-group">
                         <input type="text" name="phone" placeholder="phone" class="form-control">
 
-                    </div>
-
+                    </div>                    
                     <button type="submit" class="btn btn-primary"> Guardar</button>
                 </form>
             
