--- a/src/views/customer_edith.ejs
+++ b/src/views/customer_edith.ejs
@@ -28,6 +28,7 @@
             />
   
             <button type="submit" class="btn btn-primary">save customer</button>
+            <button  class="btn btn-primary btn-report ">generar reporte</button>
           </form>
         </div>
       </div>
