--- a/src/views/customer_edith.ejs
+++ b/src/views/customer_edith.ejs
@@ -26,9 +26,16 @@
               placeholder="Phone"
               class="form-control mb-3"
             />
+            <input
+              type="text"
+              name="phone"
+              value="<%= customer.phone%>"
+              placeholder="Phone"
+              class="form-control mb-3"
+            />
   
             <button type="submit" class="btn btn-primary">save customer</button>
-            <button  class="btn btn-primary btn-report ">generar reporte</button>
+            <button  class="btn btn-primary btn-report" style="right: auto;">generar reporte</button>
           </form>
         </div>
       </div>
